Fixed overflow issues with sidebar, added a remember me option to log in form

--- a/src/SharedDesign/SharedDesignStyle.css
+++ b/src/SharedDesign/SharedDesignStyle.css
@@ -4,11 +4,16 @@
     height: 100vh;
     position: absolute;
     width: 100%;
+    background-size: 100% 100%;
 }
 /*for id */
 #wrong-details-text{
     display: none;
     color: red;
+}
+
+.overflow-case{
+    height: 77vh;
 }
 
 #base-form{
